# Snow-Drone

./: .gitignore  README.md  git_util.sh  hard_reset.py  image_acquisition.py  image_processor.py  main.py  pyproject.toml  read_trisonica.py  requirements.txt  setup.py
Snow-Drone/: main.py  run_threads.py
Snow-Drone/imaging/: image_acquisition.py
Snow-Drone/utils/: parser.py
Snow-Drone/weather_data/: read_trisonica.py
