[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Snow-Drone"
description = "Image acquisition and online processing for drone snowflake data collection."
authors = [
    { name = "Vikram Damani" },
    { name = "Léon Mamié" },
]
readme = "README.md"
urls = {github = "https://github.com/Snow-Drone/Snow-Drone"}
dynamic = ["version"]

[tool.setuptools]
packages = ["Snow-Drone"]

[tool.setuptools.dynamic]
version = {attr = "Snow-Drone.__version__"}